[package]
name = "nvidia"
version = "0.1.13"
edition = "2021"
authors = ["Trevor Sullivan <trevor@trevorsullivan.net>"]
description = "A Rust utility to retrieve information about NVIDIA GPUs installed in your system."
license = "MIT"
homepage = "https://github.com/pcgeek86/nvidia-rs"

[dependencies]
crossterm = "0.28.1"
nvml-wrapper = "0.10.0"
ratatui = { version = "0.28.1", features = ["all-widgets"] }
log = "0.4.22"
env_logger = "0.11.5"

[rust]
debug = true
debuginfo-level = 2

